--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
